# ffmpeg-api-test

./: CMakeLists.txt  build.sh  install-modules.sh
enum_devices/: CMakeLists.txt  main.c
